# bill

./: .cursorignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  docker-up.sh  export-api-token.sh  package-lock.json  package.json  pyproject.toml  tailwind.config.js  test_items.json  tsconfig.json
.github/workflows/: ci.yml  lint-format-write.yml  pull-request.yml  security.yml
src/bill/: calculator.py  cli.py  images.py  person.py  receipts.py  selections.py
src/ui/: app.py  constants.py  distribute.py  distribute.ts  extras.py  extras.ts  index.ts  items.py  items.ts  main.py  payments.py  payments.ts  people.py  persons.py  persons.ts  selections.py  session_data.py
src/ui/static/: input.css  items.js  modern-ui.js  output.css  styles.css
src/ui/templates/: distribute.html  extras.html  index.html  items.html  payments.html  people.html  persons.html  selections.html
tests/: test_calculator.py  test_images.py  test_items.py  test_receipts.py  test_selections.py  utils.py
