[tool.pytest.ini_options]
pythonpath = "src"

[tool.pdm]
distribution = false

[project]
name = "bill"
version = "1.1.0"
description = "Split Bill Web Site"
authors = [
    {name = "Sung Cho", email = "sung.w.cho@protonmail.com"},
]
dependencies = ["flask", "pillow", "openai", "pydantic", "click"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "ipykernel",
    "ruff",
    "black",
    "pytest",
    "pre-commit",
    "pytest-dotenv",
    "types-flask",
    "types-pillow",
]
