[tool.pytest.ini_options]
pythonpath = "src"

[tool.pdm]
distribution = false

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B905",  # zip() without explicit strict parameter
    "B023",  # function definition does not bind loop variable
    "C417",  # unnecessary map() usage
    "UP015", # unnecessary open mode parameters
    "UP035", # typing.List is deprecated
    "UP006", # use list instead of List
    "B011",  # do not assert False
    "I001",  # import block is un-sorted or un-formatted
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[project]
name = "bill"
version = "1.1.0"
description = "Split Bill Web Site"
authors = [
    {name = "Sung Cho", email = "sung.w.cho@protonmail.com"},
]
dependencies = ["flask", "pillow", "openai", "pydantic", "click"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "ipykernel",
    "ruff",
    "black",
    "pytest",
    "pre-commit",
    "pytest-dotenv",
    "types-flask",
    "types-pillow",
    "pytest-cov",
    "coverage",
]
security = [
    "bandit",
    "safety",
]
