[tool.pytest.ini_options]
pythonpath = "src"

[tool.pdm]
distribution = false

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[project]
name = "bill"
version = "1.2.0"
description = "Split Bill Web Site"
authors = [
    {name = "Sung Cho", email = "sung.w.cho@protonmail.com"},
]
dependencies = ["flask", "pillow", "openai", "pydantic", "click", "openpyxl"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "ipykernel",
    "ruff",
    "black",
    "pytest",
    "pre-commit",
    "pytest-dotenv",
    "types-flask",
    "types-pillow",
    "pytest-cov",
    "coverage",
]
security = [
    "bandit",
    "safety",
]
